chore: Resolve layout issue by clearing browser cache

--- a/layout/styles/layout.scss
+++ b/layout/styles/layout.scss
@@ -24,6 +24,5 @@ body {
 .root {
     max-width: 35rem;
     margin: 0 auto;
-    background-color: seagreen;
     // padding: 0rem 2rem 0 2rem; /* trbl */
 }
